# Labka_5_30_03

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run.sh
z3a/: stack.h
z5_BST/: Tree.hpp
